<?xml version="1.0" encoding="utf-8"?>


<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <!-- Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"/>

    <!-- Main Content Layout (ScrollView + ConstraintLayout) -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="411dp"
            android:layout_height="70dp"
            android:background="#B7202F"
            android:isScrollContainer="false"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:navigationIcon="@android:drawable/ic_menu_sort_by_size"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="171dp"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="37dp"
            android:fontFamily="@font/baloo"
            android:text="@string/canteen"
            android:textColor="#B7202F"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="196dp"
            android:layout_height="68dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:fontFamily="@font/aclonica"
            android:text="@string/kj_somaiya"
            android:textColor="#B7202F"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.421"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0" />

        <!-- Card Views for different menu items -->
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:elevation="2dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.061">

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#B7202F"
                    android:elevation="2dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="91dp"
                        android:layout_height="43dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginEnd="45dp"
                        android:layout_marginBottom="0dp"
                        android:fontFamily="@font/baloo"
                        android:text="@string/chinese"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="95dp"
                        android:layout_height="64dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginEnd="43dp"
                        android:layout_marginBottom="43dp"
                        app:srcCompat="@drawable/ramen" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:clickable="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#B7202F"
                    android:elevation="2dp">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="95dp"
                        android:layout_height="64dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginEnd="37dp"
                        android:layout_marginBottom="43dp"
                        app:srcCompat="@drawable/indian" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="94dp"
                        android:layout_height="42dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginEnd="36dp"
                        android:layout_marginBottom="0dp"
                        android:fontFamily="@font/baloo"
                        android:text="@string/indian"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.238">

        <androidx.cardview.widget.CardView
            android:id="@+id/card3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:clickable="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#B7202F"
                android:elevation="2dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="95dp"
                    android:layout_height="41dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="42dp"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/south_indian"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="95dp"
                    android:layout_height="64dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="42dp"
                    android:layout_marginBottom="41dp"
                    app:srcCompat="@drawable/south" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:clickable="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#B7202F"
                android:elevation="2dp">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="95dp"
                    android:layout_height="64dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="38dp"
                    android:layout_marginBottom="39dp"
                    app:srcCompat="@drawable/sandwich" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="95dp"
                    android:layout_height="38dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="39dp"
                    android:layout_marginBottom="3dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/sandwiches"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <androidx.cardview.widget.CardView
            android:id="@+id/card5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:clickable="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#B7202F"
                android:elevation="2dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="96dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="41dp"
                    android:layout_marginBottom="6dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/chaat"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="95dp"
                    android:layout_height="64dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="41dp"
                    android:layout_marginBottom="41dp"
                    app:srcCompat="@drawable/chaat" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:clickable="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#B7202F"
                android:elevation="2dp">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="95dp"
                    android:layout_height="64dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="35dp"
                    android:layout_marginBottom="45dp"
                    app:srcCompat="@drawable/drinks" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="92dp"
                    android:layout_height="42dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="38dp"
                    android:layout_marginBottom="1dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/soft_drinks"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="112dp"
            android:layout_height="107dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.935"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.089"
            app:srcCompat="@drawable/canteen" />



        <Button
            android:id="@+id/btn_change_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="4dp"
            android:text="🌐"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>